@@ -42,10 +42,10 @@ IF (APPLE)
       SET (OPENGL_INCLUDE_DIR	${GLX_INCLUDE_DIR})
       SET (OPENGL_LIBRARIES	${GLX_LIBRARIES})
     ELSE ()
-      UNSET (OPENGL_FOUND)
+      SET (OPENGL_FOUND)
     ENDIF ()
   ELSE (X11_FOUND)
-    UNSET (OPENGL_FOUND)
+    SET (OPENGL_FOUND)
   ENDIF (X11_FOUND)
 ENDIF (APPLE)
 
